# Bybbot

./: .flake8  .gitignore  Bybbot.py  README.md  cauchy.py  jukebox.py  launcher.py  main.c  main.py  makefile  module.py  pyproject.toml  requirements.txt  swag.py  utils.py
bobbycall/: bobbycall.py  client.py  game.py
jukebox/: jukebox.py  jukebox_client.py  utils.py
maintenance/: maintenance_client.py
sounds/aoe/: aoe.tr
sounds/cdl/: CDL.tr
sounds/duke/: duke.tr
sounds/dune/: dune.tr
sounds/kaa/Angharad/: Angharad.tr
sounds/kaa/Anna/: Anna.tr
sounds/kaa/Appius Manilius/: Appius Manilius.tr
sounds/kaa/Arthur/: Arthur.tr
sounds/kaa/Attila/: Attila.tr
sounds/ouich/: laClasse.tr
sounds/roi/: Roi_Arthur.tr
sounds/war1/: warcraft_1.tr
swag/: __init__.py  assert_timezone.py  bank.py  block.py  cauchy.py  currencies.py  db.py  errors.py  id.py  stylog.py  swag.py  swag_client.py  transactions.py  utils.py  yfu.py
swag/artefacts/: Yfu.py  __init__.py  accounts.py  assets.py  bonuses.py  cagnotte.py  guild.py  services.py
swag/blockchain/: __init__.py  blockchain.py  blockchain_parser.py  git_blockchain.py  synced_blockchain.py
swag/blocks/: __init__.py  cagnotte_blocks.py  mdr.py  swag_blocks.py  system_blocks.py  yfu_blocks.py
swag/client/: IHS_toolkit.py  __init__.py  cagnotte.py  client.py  style.py  swag.py  swagdmin.py  yfu.py
swag/powers/: __init__.py  actives.py  cagnotte_actives.py  modifiers.py  multitargetted_actives.py  passive_actives.py  passives.py  power.py  target.py  untargetted_actives.py  yfu_actives.py
(+223 files in other folders)
